deployment/cluster/production/hubble-commander/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hubble-commander
  name: hubble-commander
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubble-commander
  template:
    metadata:
      labels:
        app: hubble-commander
        admission.datadoghq.com/enabled: "true"
      annotations:
        ad.datadoghq.com/hubble-commander.logs: '[{"source":"go","service":"hubble-commander"}]'
        ad.datadoghq.com/tags: '{"env":"production"}'
    spec:
      imagePullSecrets:
        - name: regcred
      volumes:
      - name: chain-spec-yaml
        secret:
          secretName: chain-spec
          items:
          - key: chain-spec.yaml
            path: chain-spec.yaml
      containers:
        - name: primary-hubble-commander
          image: "ghcr.io/worldcoin/hubble-commander@sha256:f65594ef5814288b2a3f188ca821edd113e3743bb0224c8f5386d25a4ecb1f72"
          imagePullPolicy: Always
          volumeMounts:
          - name: chain-spec-yaml
            mountPath: /chain-spec
          ports:
            - containerPort: 8080
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "curl --fail -X POST http://localhost:8080 -H 'Content-Type: application/json' --data-raw '{\"jsonrpc\": \"2.0\",\"method\": \"hubble_getVersion\",\"params\": [],\"id\": 1}'"
            initialDelaySeconds: 250
            periodSeconds: 5
          resources:
            requests:
              memory: "124Mi"
              cpu: "250m"
            limits:
              memory: "6144Mi"
              cpu: "1500m"
        - name: secondary-hubble-commander
          image: "ghcr.io/worldcoin/hubble-commander@sha256:f65594ef5814288b2a3f188ca821edd113e3743bb0224c8f5386d25a4ecb1f72"
          imagePullPolicy: Always
          volumeMounts:
          - name: chain-spec-yaml
            mountPath: /chain-spec
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "curl --fail -X POST http://localhost:8081 -H 'Content-Type: application/json' --data-raw '{\"jsonrpc\": \"2.0\",\"method\": \"hubble_getVersion\",\"params\": [],\"id\": 1}'"
            initialDelaySeconds: 350
            periodSeconds: 5
          resources:
            requests:
              memory: "124Mi"
              cpu: "250m"
            limits:
              memory: "6144Mi"
              cpu: "1500m"
